# 10-Academy

./: .coderabbit.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
delivery_challenge/: internal_qa_log.md
delivery_challenge/analysis/: delivery_gap_report.md
delivery_challenge/communication/: client_email.md
delivery_challenge/data/: data_audit.md
skills/: trend_scout.py  wallet.py
skills/__pycache__/: wallet.cpython-312.pyc.1873572126304
specs/: _meta.md  functional.md  technical.md
tests/: conftest.py  test_audit.py  test_governance.py  test_skills_interface.py  test_trend_fetcher.py
tests/__pycache__/: conftest.cpython-312-pytest-9.0.2.pyc.34204  test_audit.cpython-312-pytest-9.0.2.pyc.34204  test_governance.cpython-312-pytest-9.0.2.pyc.34204  test_skills_interface.cpython-312-pytest-9.0.2.pyc.18844  test_trend_fetcher.cpython-312-pytest-9.0.2.pyc.18844
